feat: add method delete in departament
